force-app/main/default/objects/PartnerAPI__c/PartnerAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PartnerAPI</label>
</CustomObject>