force-app/main/default/objects/PartnerAPI__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The API is not used unless the active box is checked</description>
    <inlineHelpText>The API is not used unless the active box is checked</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>