force-app/main/default/objects/PartnerAPI__c/fields/Brand_string__c.field-meta.xml
<CustomField>
    <fullName>Brand_string__c</fullName>
    <description>built for direct energy brands--which namespace does the api use?</description>
    <inlineHelpText>built for direct energy brands--which namespace does the api use?</inlineHelpText>
    <label>Brand string</label>
    <length>30</length>
    <type>Text</type>
</CustomField>