force-app/main/default/objects/PartnerAPI__c/fields/Dynamic_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Endpoint__c</fullName>
    <description>for keeping endpoints retrieved from the primary endpoint</description>
    <inlineHelpText>for keeping endpoints retrieved from the primary endpoint</inlineHelpText>
    <label>Dynamic Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>