force-app/main/default/objects/PartnerAPI__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>fully qualified url for where to send information</description>
    <inlineHelpText>fully qualified url for where to send information</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>