force-app/main/default/objects/PartnerAPI__c/fields/Partner_code__c.field-meta.xml
<CustomField>
    <fullName>Partner_code__c</fullName>
    <description>Code or id used to identify that the data is coming from TrueCost</description>
    <inlineHelpText>Code or id used to identify that the data is coming from TrueCost</inlineHelpText>
    <label>Partner code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>