force-app/main/default/objects/PartnerAPI__c/fields/Saved_Token__c.field-meta.xml
<CustomField>
    <fullName>Saved_Token__c</fullName>
    <description>for hanging on to (caching) tokens retrieved from a login process</description>
    <inlineHelpText>for hanging on to (caching) tokens retrieved from a login process</inlineHelpText>
    <label>Saved Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>